--- a/.github/workflows/aws-ecr.yml
+++ b/.github/workflows/aws-ecr.yml
@@ -16,7 +16,7 @@ jobs:
     steps:
     
       - name: Checkout
-        uses: actions/checout@v2
+        uses: actions/checkout@v2
     
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
