--- a/.github/workflows/aws-ecr.yml
+++ b/.github/workflows/aws-ecr.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Build, tag, and push docker image to Amazon ECR
         env:
          REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-         REPOSITORY: afua-python-app
+         REPOSITORY: afua-python-nginx-app
          IMAGE_TAG: ${{ github.sha }}
         run: |
          docker build -t $REGISTRY/$REPOSITORY:$IMAGE_TAG .
