--- a/.github/workflows/aws-ecr.yml
+++ b/.github/workflows/aws-ecr.yml
@@ -31,11 +31,11 @@ jobs:
 
       - name: Build, tag, and push docker image to Amazon ECR
         env:
-         REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-         REPOSITORY: afua-python-nginx-app
+         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+         ECR_REPOSITORY: afua-python-nginx-app
          IMAGE_TAG: ${{ github.sha }}
         working-directory: ./app-1
         run: |
-         docker build -t $REGISTRY/$REPOSITORY:$IMAGE_TAG .
-         docker push $REGISTRY/$REPOSITORY:$IMAGE_TAG
+         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
         
