--- a/.github/workflows/aws-ecr.yml
+++ b/.github/workflows/aws-ecr.yml
@@ -9,7 +9,7 @@ on:
     branches: [ "master" ]
 
 jobs:
-  build:
+  build-and-push:
   
     runs-on: ubuntu-latest
     
@@ -38,4 +38,3 @@ jobs:
         run: |
          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
          docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-        
