--- a/.github/workflows/aws-ecr.yml
+++ b/.github/workflows/aws-ecr.yml
@@ -32,7 +32,7 @@ jobs:
       - name: Build, tag, and push docker image to Amazon ECR
         env:
          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-         ECR_REPOSITORY: test-repo
+         ECR_REPOSITORY: afua-python-nginx-app
          IMAGE_TAG: ${{ github.sha }}
         working-directory: ./app-1
         run: |
